Fix crash when opening Krita with ABR brushes with upper case extensions

On Windows we QDirIterator returns us all the matching storages in
case-insensitive manner, so we should make sure we can handle these
storages later.

The patch also adds a fallback storage plugin to make sure Krita
will not crash when handling such storage later.

BUG:447454